<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:baselineAligned="false"
    android:gravity="center_vertical"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/ll_tab_scan"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="?attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_tab_scan"
            android:layout_width="@dimen/cm_dp_25"
            android:layout_height="@dimen/cm_dp_25"
            android:layout_gravity="center_horizontal"
            app:srcCompat="@drawable/vector_ic_tab_scan_selected" />

        <TextView
            android:id="@+id/tv_tab_scan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/main_tab_scan"
            android:textColor="@color/bottom_tab_selected_color"
            android:textSize="@dimen/cm_sp_11" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_tab_creat"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="?attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_tab_creat"
            android:layout_width="@dimen/cm_dp_25"
            android:layout_height="@dimen/cm_dp_25"
            android:layout_gravity="center_horizontal"
            app:srcCompat="@drawable/vector_ic_tab_creat_unselected" />

        <TextView
            android:id="@+id/tv_tab_creat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/main_tab_create"
            android:textColor="@color/bottom_tab_unselected_color"
            android:textSize="@dimen/cm_sp_11" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_tab_history"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="?attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_tab_history"
            android:layout_width="@dimen/cm_dp_25"
            android:layout_height="@dimen/cm_dp_25"
            android:layout_gravity="center_horizontal"
            app:srcCompat="@drawable/vector_ic_tab_history_unselected" />

        <TextView
            android:id="@+id/tv_tab_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/main_tab_history"
            android:textColor="@color/bottom_tab_unselected_color"
            android:textSize="@dimen/cm_sp_11" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_tab_more"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="?attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_tab_more"
            android:layout_width="@dimen/cm_dp_25"
            android:layout_height="@dimen/cm_dp_25"
            android:layout_gravity="center_horizontal"
            app:srcCompat="@drawable/vector_ic_tab_more_unselected" />

        <TextView
            android:id="@+id/tv_tab_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/main_tab_settings"
            android:textColor="@color/bottom_tab_unselected_color"
            android:textSize="@dimen/cm_sp_11" />
    </LinearLayout>
</LinearLayout>