<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_back"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:layout_alignParentStart="true"
            android:background="?attr/selectableItemBackground"
            android:scaleType="center"
            app:srcCompat="@drawable/ic_arrow_back_black" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_create"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/cm_dp_16"
            android:gravity="center"
            android:drawablePadding="@dimen/cm_dp_8"
            android:scaleType="center"
            android:text="@string/main_tab_create"
            android:textColor="#9AA7B9"
            android:textSize="@dimen/cm_sp_16"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_create"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/cm_dp_16"
            android:layout_toStartOf="@+id/tv_create"
            android:paddingStart="@dimen/cm_dp_16"
            android:paddingEnd="@dimen/cm_dp_4"
            app:srcCompat="@drawable/ic_check_black" />

        <View
            android:id="@+id/view_create"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignStart="@+id/iv_create"
            android:background="?attr/selectableItemBackground" />

    </RelativeLayout>


    <View
        android:id="@+id/divide_line"
        android:layout_width="match_parent"
        android:layout_height="@dimen/cm_dp_1"
        android:background="#E8E9EC"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbarThumbVertical="@drawable/shape_scrollbar"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divide_line">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/cm_dp_100"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <include
                android:id="@+id/icon"
                layout="@layout/item_rcv_creat_open"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/ll_mode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/cm_dp_16"
                android:layout_marginTop="@dimen/cm_dp_6"
                android:layout_marginEnd="@dimen/cm_dp_16"
                android:background="@drawable/shape_creat_wifi_mode_bg"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/icon">

                <TextView
                    android:id="@+id/tv_category_url"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/cm_dp_40"
                    android:layout_weight="1"
                    android:fontFamily="@string/roboto_medium"
                    android:gravity="center"
                    android:text="@string/result_uri" />

                <TextView
                    android:id="@+id/tv_category_video"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/cm_dp_40"
                    android:layout_weight="1"
                    android:background="@drawable/shape_creat_wifi_mode_item_bg_select"
                    android:fontFamily="@string/roboto_medium"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:text="@string/video_id" />

                <TextView
                    android:id="@+id/tv_category_channel"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/cm_dp_40"
                    android:layout_weight="1"
                    android:fontFamily="@string/roboto_medium"
                    android:gravity="center"
                    android:text="@string/channel_id" />

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/cm_dp_16"
                android:layout_marginTop="@dimen/cm_dp_20"
                android:layout_marginEnd="@dimen/cm_dp_16"
                android:fontFamily="@string/roboto_medium"
                android:hint="@string/enter_youtube_video_id"
                android:inputType="textEmailAddress"
                android:padding="@dimen/cm_dp_16"
                android:singleLine="true"
                android:textSize="@dimen/cm_sp_14"
                android:theme="@style/MyEditText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ll_mode" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_clipboard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/cm_dp_16"
                android:paddingTop="@dimen/cm_dp_6"
                android:paddingBottom="@dimen/cm_dp_6"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_clipboard"
                app:srcCompat="@drawable/vector_ic_copy_black" />

            <TextView
                android:id="@+id/tv_clipboard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@string/roboto_medium"
                android:padding="@dimen/cm_dp_6"
                android:paddingEnd="@dimen/cm_dp_30"
                android:textColor="#5598FF"
                android:visibility="gone"
                app:layout_constraintStart_toEndOf="@+id/iv_clipboard"
                app:layout_constraintTop_toBottomOf="@+id/et_input" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>